@@ -1161,6 +1161,30 @@ public class HTable {
    *
    * @param row The row to operate on
    * @param family The column family to match
+   * @throws IOException
+   */
+  public void deleteFamily(final String row, final String family) 
+  throws IOException {
+    deleteFamily(row, family, HConstants.LATEST_TIMESTAMP);
+  }
+
+  /**
+   * Delete all cells for a row with matching column family at all timestamps.
+   *
+   * @param row The row to operate on
+   * @param family The column family to match
+   * @throws IOException
+   */
+  public void deleteFamily(final byte[] row, final byte[] family) 
+  throws IOException {
+    deleteFamily(row, family, HConstants.LATEST_TIMESTAMP);
+  }
+
+  /**
+   * Delete all cells for a row with matching column family at all timestamps.
+   *
+   * @param row The row to operate on
+   * @param family The column family to match
    * @param timestamp Timestamp to match
    * @throws IOException
    */  
